# parsifal-invoke

./: __init__.py  engine.py  invokeai_invocation.py  pyproject.toml  requirements.txt  uv.toml
